--- a/src/app/feature/pizzas/pizzas.component.html
+++ b/src/app/feature/pizzas/pizzas.component.html
@@ -6,7 +6,7 @@
         <div class="card-body pb-3">
           <h5 class="card-title">{{ pizza.name }}</h5>
             <p class="card-text fw-semibold">
-              {{ pizza.price | currency : "EUR" : true }}
+              {{ pizza.price | currency : "EUR" }}
             </p>
             <div class="btn-container d-flex justify-content-around mb-3">
               <button
